<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/opt_progress"
        android:showAsAction="always"
        android:title="@string/progress"
        android:visibility="invisible"
        />
    <item
        android:id="@+id/opt_bt"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_bluetooth"
        android:title="@string/bt" 
        />
    <item
        android:id="@+id/opt_e2e"
        android:title="@string/tie2e"/>
    <item
        android:id="@+id/opt_sthome"
        android:title="@string/sthome"/>
    <item
        android:id="@+id/opt_license"
        android:title="@string/license"/>
    <item
        android:id="@+id/opt_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"/>
    <item
        android:id="@+id/opt_exit"
        android:title="@string/exit"/>


</menu>
