<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TableLayout
        android:id="@+id/services_browser_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*" >
        
        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/keys"
                android:layout_height="60dp" />
        </TableRow>

        <TableRow
            android:id="@+id/keyPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/sensortag_simplekeys" />

            <ImageView
                android:id="@+id/buttons"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:contentDescription="@string/image"
                android:src="@drawable/buttonsoffoff" />

            <TextView android:layout_span="1" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/acc" />
        </TableRow>

        <TableRow
            android:id="@+id/accPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/accelerometer" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/xyz3" />

            <TextView
                android:id="@+id/accelerometerTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty3" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitG3" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/mag" />
        </TableRow>

        <TableRow
            android:id="@+id/magPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/sensortag_magnetometer" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/xyz3" />

            <TextView
                android:id="@+id/magnetometerTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty3" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitT3" />
        </TableRow>
        
        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/gyro" />
        </TableRow>

        <TableRow
            android:id="@+id/gyrPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/gyroscope" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/xyz3" />

            <TextView
                android:id="@+id/gyroscopeTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty3" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitDegSec3" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/tObj" />
        </TableRow>

        <TableRow
            android:id="@+id/objPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/irtemperature" />

            <TextView style="@style/ServiceItem" />

            <TextView
                android:id="@+id/objTemperatureText"
                style="@style/ServiceItemValue"
                android:text="@string/empty1" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitDeg" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/tAmb" />
        </TableRow>

        <TableRow
            android:id="@+id/ambPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/temperature" />

            <TextView
                style="@style/ServiceItem"
                android:text="" />

            <TextView
                android:id="@+id/ambientTemperatureTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty1" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitDeg" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/hum" />
        </TableRow>

        <TableRow
            android:id="@+id/humPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/humidity" />

            <TextView
                style="@style/ServiceItem"
                android:text="" />

            <TextView
                android:id="@+id/humidityTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty1" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitRH" />
        </TableRow>

        <TableRow style="@style/ServiceHeaderRow" >

            <TextView
                style="@style/ServiceHeaderItem"
                android:text="@string/bar" />
        </TableRow>

        <TableRow
            android:id="@+id/barPanel"
            style="@style/ServiceRow" >

            <TextView android:drawableLeft="@drawable/barometer" />

            <TextView
                style="@style/ServiceItem"
                android:text="" />

            <TextView
                android:id="@+id/barometerTxt"
                style="@style/ServiceItemValue"
                android:text="@string/empty1" />

            <TextView
                style="@style/ServiceItem"
                android:text="@string/unitPA_Meter" />
        </TableRow>
        
        </TableLayout>
</ScrollView>