<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/nameStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/cur_image" />

        <TextView
            android:id="@+id/tw_target"
            style="@style/dataStyle1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:text="@string/no_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/nameStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:text="@string/new_image" />

        <TextView
            android:id="@+id/tw_file"
            style="@style/dataStyle1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="left"
            android:text="@string/no_image_sel"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btn_load_a"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onLoad"
            android:text="@string/load_image_a" />

        <Button
            android:id="@+id/btn_load_b"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:onClick="onLoad"
            android:text="@string/load_image_b" />

        <Button
            android:id="@+id/btn_load_c"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:onClick="onLoadCustom"
            android:text="@string/load_image_c" />
    </LinearLayout>

    <TextView
        android:id="@+id/tw_info"
        style="@style/dataStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/idle"
        android:textSize="14dp" />

    <ProgressBar
        android:id="@+id/pb_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:indeterminate="false"
        android:max="100"
        android:maxHeight="15dp"
        android:minHeight="15dp"
        android:progress="0" />

    <TextView
        android:id="@+id/tw_log"
        style="@style/logStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:lines="10"
        android:padding="5dp" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:onClick="onStart"
        android:text="@string/start_prog" />

</LinearLayout>